# ADK-Practice

./: .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  agent.py  main.py  pyproject.toml  scriptwriter_instruction.txt  youtube_shorts_assistant.py
Agentic-Tools/: README.md
Agentic-Tools/brand-SEO/: .env.example  .gitignore  README.md  __init__.py  prompt.py  pyproject.toml
Agentic-Tools/brand-SEO/shared_libraries/: README.md
Agentic-Tools/brand-SEO/sub_agent/: README.md
Agentic-Tools/brand-SEO/tools/: README.md
Agentic-Tools/e-commerce/: .env.example  README.md  agent.py
Agentic-Tools/youtube_shorts/: README.md  visualizer_instruction.txt
Practice/: README.md  pyproject.toml
Practice/1-basic-agent/: README.md  main.py  pyproject.toml
Practice/1-basic-agent/greeting_agent/: agent.py
Practice/2-tool_agent/: README.md
Practice/2-tool_agent/tool_agent/: agent.py
Practice/3-litellm_agent/: .env.example  README.md  main.py  pyproject.toml
Practice/4-structured-output/: README.md  main.py  pyproject.toml
Practice/5-session-and-state/: README.md  basic-stateful-session.py
Practice/6-persistant-storage/: README.md  main.py  memory_agent.db  utils.py
Practice/7-multi-agent/: README.md  main.py
brand-SEO/: README.md  agent.py  main.py  prompt.py  pyproject.toml
brand-SEO/shared_libraries/: README.md  constants.py
brand-SEO/sub_agent/: README.md
docs/: README.md
e-commerce/: agent.py  vector_service.py
youtube_shorts/: __init__.py  agent.py  youtube_shorts_assistant.py
(+25 files in other folders)
