[project]
name = "adk-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.10.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.10.0,<4",
    "google-genai>=1.29.0",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "scikit-learn>=1.3.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.2.0",
]

[tool.uv.workspace]
members = [
    "brand-SEO",
    "Practice",
    "Practice/1-basic-agent",
]
